<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cz.brouk.englishproverbs.MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="15pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/app_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15pt" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/searchText"
        android:hint="@string/search_default_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/search_button"
        android:id="@+id/buttonSearch"
        android:onClick="searchProverb" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15pt" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/all_button"
        android:id="@+id/buttonAll"
        android:onClick="allProverbs"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15pt" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/random_button"
        android:id="@+id/button_random"
        android:onClick="randomProverbDetail" />

</LinearLayout>
